v 1.0.3.4 (30 nov)

Unobtainium huts
A couple of new space missions

v 1.0.3.3 (15 nov)

Unobtainium capacity will be limited by moon bases (with small base amount)
Unobtainium output of moon bases was reduced by ~45%
Titanium to uranium conversion ration will now require ~30% more titanium
Titanium price of mansions was significantly increased, while steel/concrate price slightly reduced
Concrete Huts bonus was reduced from 50% to 35% (due to all those endless "wait till concrete huts" threads)

Added option to highlight capacity challenged buildings/upgrades (sic)
Added option to hide sell links for buildings

Space Elevators
- reduce oil requirement of space missions by 5% (and actually working)

v 1.0.3.2 (15 nov)

Fixed SETI preventing other random events
Religion upgrades will not give double bonuses if transcendece is not researched
Moon base will now grant storage bonus

Stasis Chambers
Unobtainium Reflectors
LHC
Exogeology


v 1.0.2.2 (7 nov)

Changes by Ædx:
___
	Fixed space program purchases not highlighting oil and rockets (http://redd.it/2lm044)
	Fixed incorrect grassy theme layout
	Fixed dark theme colours
	Fixed misc default theme bugs
	Fixed typos

Changes by xranti:
___
	Fixed steamworks coal multiplier on rate/tooltip
	Adjust listed titanium trade amount for ships
	Space ratio bonuses are now applied
	Reactors no longer affect accelerators
	Resource tooltips no longer show multipliers that don't apply
	Fixed religion effects
	Fixed weather ratio in resource tooltips
	Bio lab bonuses no longer get turned off
	Faith/Magnetos/Reactors/Paragon now affect titanium from smelters

Storage upgrades in workshop will no longer affect Accelerators


v 1.0.2.1 (5 nov)

Resource-heavy missions have less chance to fail.
Failed missions will return 40-70% of spent resources
Fixed that one bug with lunar outposts

v 1.0.2.0 (4 nov)

First race arrives 15 year earlier after the reset
Moon base should give correct population bonus