@@ -9,19 +9,20 @@
 
 		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.0/dojo/dojo.js"></script>
 
-		<script src="core.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="resources.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="calendar.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="buildings.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="village.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="science.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="workshop.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="diplomacy.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="religion.js?v=1.0.3.4" type="text/javascript"></script>
+		<script src="core.js?v=1.0.3.4" 		type="text/javascript"></script>
+		<script src="resources.js?v=1.0.3.4" 	type="text/javascript"></script>
+		<script src="calendar.js?v=1.0.3.4" 	type="text/javascript"></script>
+		<script src="buildings.js?v=1.0.3.4" 	type="text/javascript"></script>
+		<script src="village.js?v=1.0.3.4" 		type="text/javascript"></script>
+		<script src="science.js?v=1.0.3.4" 		type="text/javascript"></script>
+		<script src="workshop.js?v=1.0.3.4" 	type="text/javascript"></script>
+		<script src="diplomacy.js?v=1.0.3.4" 	type="text/javascript"></script>
+		<script src="religion.js?v=1.0.3.4" 	type="text/javascript"></script>
 		<script src="achievements.js?v=1.0.3.4" type="text/javascript"></script>
-		<script src="space.js?v=1.0.3.4" type="text/javascript"></script>
+		<script src="space.js?v=1.0.3.4" 		type="text/javascript"></script>
+		<script src="prestige.js?v=1.0.3.4" 	type="text/javascript"></script>
 
-		<script src="game.js?v=1.0.3.4" type="text/javascript"></script>
+		<script src="game.js?v=1.0.3.4" 		type="text/javascript"></script>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
