@@ -2,6 +2,7 @@ v 1.0.3.4 (30 nov)
 
 Unobtainium huts
 A couple of new space missions
+BLS will be saved upon reset
 
 v 1.0.3.3 (15 nov)
 
